--- a/package.json
+++ b/package.json
@@ -1,24 +1,98 @@
 {
-  "name": "archetype-next-js",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
-  }
+    "name": "archetype-next-js",
+	"description": "Runroom NextJS Archetype",
+    "version": "1.0.0",
+	"author": "@runroom",
+  	"license": "MIT",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "dev:test": "NODE_ENV=test concurrently -n Dev,MockServer -c blue,green \"npm:dev\" \"npm:dev:mock-server\" ",
+        "dev:local": "NODE_ENV=local npm run dev",
+        "dev:mock-server": "tsx ./tests/mocks/http.ts",
+        "build": "next build",
+        "start": "next start",
+        "lint:next": "next lint",
+        "test": "vitest",
+        "e2e:dev": "cypress open --e2e",
+        "e2e:dev:test": "concurrently -n Dev,Cypress -c blue,yellow \"npm:dev:test\" \"npm:e2e:dev\"",
+        "e2e:run": "cypress run",
+        "design-tokens": "design-tokens",
+        "format": "prettier --write .docker .github src tsconfig.json .eslintrc.js stylelint.config.js postcss.config.js prettier.config.js cypress.config.ts tests next.config.js i18nConfig.ts vitest.config.ts",
+        "lint": "run-p lint:*",
+        "lint:eslint": "eslint \"src/**/*.{ts,tsx}\"",
+        "lint:prettier": "prettier --check .docker .github src tsconfig.json .eslintrc.js stylelint.config.js postcss.config.js prettier.config.js cypress.config.ts tests next.config.js i18nConfig.ts vitest.config.ts",
+        "lint:stylelint": "stylelint \"src/**/*.css\""
+    },
+	"engines": {
+		"node": ">=20"
+	  },
+    "dependencies": {
+        "@hookform/resolvers": "3.3.4",
+        "@tanstack/query-core": "5.17.10",
+        "@tanstack/react-query": "5.17.12",
+        "@tanstack/react-query-devtools": "5.17.12",
+        "@types/node": "20.11.4",
+        "@types/react": "18.2.48",
+        "@types/react-dom": "18.2.18",
+        "i18next": "23.7.16",
+        "i18next-resources-to-backend": "1.2.0",
+        "next": "14.0.4",
+        "next-auth": "4.24.5",
+        "next-i18n-router": "5.2.0",
+        "next-i18next": "15.2.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hook-form": "7.49.3",
+        "react-i18next": "14.0.0",
+        "uuid": "9.0.1",
+        "zod": "3.22.4"
+    },
+    "devDependencies": {
+        "@mswjs/http-middleware": "0.9.2",
+        "@runroom/design-tokens": "4.0.0",
+        "@runroom/npm-scripts": "3.0.1",
+        "@testing-library/cypress": "10.0.1",
+        "@testing-library/jest-dom": "6.2.0",
+        "@testing-library/react": "14.1.2",
+        "@testing-library/user-event": "14.5.2",
+        "@types/cors": "2.8.17",
+        "@types/express": "4.17.21",
+        "@types/jsonwebtoken": "9.0.5",
+        "@types/uuid": "9.0.7",
+        "@typescript-eslint/eslint-plugin": "6.19.0",
+        "@typescript-eslint/parser": "6.19.0",
+        "@vitejs/plugin-react": "4.2.1",
+        "concurrently": "8.2.2",
+        "cors": "2.8.5",
+        "cypress": "13.6.2",
+        "eslint": "8.56.0",
+        "eslint-config-next": "14.0.4",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-config-standard": "17.1.0",
+        "eslint-plugin-cypress": "2.15.1",
+        "express": "4.18.2",
+        "jsdom": "23.2.0",
+        "jsonwebtoken": "9.0.2",
+        "msw": "2.0.12",
+        "next-router-mock": "0.9.11",
+        "npm-run-all": "4.1.5",
+        "postcss": "8.4.33",
+        "postcss-import": "16.0.0",
+        "postcss-mixins": "9.0.4",
+        "postcss-preset-env": "9.3.0",
+        "postcss-sort-media-queries": "5.2.0",
+        "prettier": "3.2.2",
+        "stylelint": "16.1.0",
+        "stylelint-config-recommended": "14.0.0",
+        "stylelint-config-standard": "36.0.0",
+        "ts-loader": "9.5.1",
+        "tsx": "4.7.0",
+        "typescript": "5.3.3",
+        "vite-tsconfig-paths": "4.2.3",
+        "vitest": "1.2.0"
+    },
+    "msw": {
+        "workerDirectory": "public"
+    }
 }
